@@ -143,6 +143,7 @@ TaCutList::Init(const TaDataBase& db)
   fLoBeamNo  = db.GetCutNumber (TaString ("Low_beam"));
   fBurpNo    = db.GetCutNumber (TaString ("Beam_burp"));
   fSatNo     = db.GetCutNumber (TaString ("Det_saturate"));
+  fMonSatNo  = db.GetCutNumber (TaString ("Mon_saturate"));
   fPosBurpNo = db.GetCutNumber (TaString ("Pos_burp"));
   fCBurpNo   = db.GetCutNumber (TaString ("C_burp"));
 
@@ -182,6 +183,7 @@ TaCutList::OKC (const VaEvent& ev) const
       if (c->GetCut() != fLoBeamNo && 
 	  c->GetCut() != fBurpNo &&
 	  c->GetCut() != fSatNo &&
+	  c->GetCut() != fMonSatNo &&
 	  c->GetCut() != fPosBurpNo &&
 	  c->Inside(ev, fLowExtension[c->GetCut()], 
 		    fHighExtension[c->GetCut()]) && 
